# license_service

./: .dockerignore  .env  Dockerfile  app.py  docker-compose.yml  requirements.txt
data/: licenses.db
licgen/: CMakeLists.txt  README.md
licgen/include/licgen/: licgen.h
licgen/src/: common.h  crypt.c  crypt.h  detect-vm.h  file-utils.c  file-utils.h  hash.c  hash.h  hex-utils.c  hex-utils.h  hwinfo.h  licgen-generator.c  licgen.c  obfuscation.c  obfuscation.h  time-utils.c  time-utils.h
licgen/src/unix/: detect-vm.c  dmi.c  dmi.h  hwinfo.c
licgen/src/windows/: bstr-utils.c  bstr-utils.h  detect-vm.c  hwinfo.c  wmi.c  wmi.h
licgen/tests/: test-crypt.c  test-hash.c  test-hwinfo.c  test-licgen-file.c  test-licgen.c  test-vm.c
pip_packages/: sqlalchemy-2.0.48-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl
templates/: admin.html  admin_login.html  generator.html  login.html
