cmake_minimum_required(VERSION 3.0.2)
project(licgen C)

option(LICGEN_BUILD_STATIC "Build the static version of the library instead of shared" OFF)
option(LICGEN_BUILD_GENERATOR "Build license generator application" OFF)
option(LICGEN_BUILD_TESTAPPS "Build test applications" OFF)
option(LICGEN_HWINFO_USE_RAM "Use RAM in hardware info string" ON)
option(LICGEN_HWINFO_USE_CPU_VENDORS "Use CPU vendors in hardware info string" ON)
option(LICGEN_HWINFO_USE_BOARD_VENDOR "Use board vendor in hardware info string" ON)
option(LICGEN_HWINFO_USE_BOARD_NAME "Use board name in hardware info string" ON)
option(LICGEN_HWINFO_USE_CHASSIS_VENDOR "Use chassis vendor in hardware info string" ON)
option(LICGEN_HWINFO_USE_DISK_SERIAL "Use disk serial in hardware info string" ON)
option(LICGEN_ADD_EXPIRE_TIME "Add expire time to license" ON)
option(LICGEN_CHECK_VM "Check running on virtual machine. WARNING: if this option is off, hardware info module may work
                        incorrectly on virtual machines" ON)

if(NOT LICGEN_APPLICATION_NAME)
    message(FATAL_ERROR "LICGEN_APPLICATION_NAME variable is not set")
endif()
if(NOT LICGEN_APPLICATION_SECRET)
    message(FATAL_ERROR "LICGEN_APPLICATION_SECRET variable is not set")
endif()

if(UNIX)
    add_definitions(-DUNIX)
elseif(MSVC)
    add_definitions(-DWINDOWS)
endif()

if(UNIX)
    list(APPEND HWINFO_SOURCES src/unix/hwinfo.c src/unix/dmi.c)
    list(APPEND VM_SOURCES src/unix/detect-vm.c src/unix/dmi.c)
elseif(MSVC)
    list(APPEND HWINFO_SOURCES src/windows/hwinfo.c src/windows/wmi.c src/windows/bstr-utils.c)
    list(APPEND VM_SOURCES src/windows/detect-vm.c src/windows/wmi.c src/windows/bstr-utils.c)
else()
    message(FATAL_ERROR "Unsupported platform!")
endif()
list(APPEND LICGEN_SOURCES src/licgen.c
                           ${HWINFO_SOURCES}
                           src/hash.c
                           src/obfuscation.c
                           src/crypt.c
                           src/file-utils.c
                           src/hex-utils.c
                           src/time-utils.c
                           ${VM_SOURCES})

if(LICGEN_HWINFO_USE_RAM)
    list(APPEND LICGEN_DEFINITIONS RAM)
endif()
if(LICGEN_HWINFO_USE_CPU_VENDORS)
    list(APPEND LICGEN_DEFINITIONS CPU_VENDORS)
endif()
if(LICGEN_HWINFO_USE_BOARD_VENDOR)
    list(APPEND LICGEN_DEFINITIONS BOARD_VENDOR)
endif()
if(LICGEN_HWINFO_USE_BOARD_NAME)
    list(APPEND LICGEN_DEFINITIONS BOARD_NAME)
endif()
if(LICGEN_HWINFO_USE_CHASSIS_VENDOR)
    list(APPEND LICGEN_DEFINITIONS CHASSIS_VENDOR)
endif()
if(LICGEN_HWINFO_USE_DISK_SERIAL)
    list(APPEND LICGEN_DEFINITIONS DISK_SERIAL)
endif()
if(LICGEN_ADD_EXPIRE_TIME)
    list(APPEND LICGEN_DEFINITIONS EXPIRE_TIME)
endif()
if(LICGEN_CHECK_VM)
    list(APPEND LICGEN_DEFINITIONS CHECK_VM)
endif()

if(NOT LICGEN_BUILD_STATIC)
    add_library(licgen SHARED ${LICGEN_SOURCES})
else()
    add_library(licgen STATIC ${LICGEN_SOURCES})
endif()
target_compile_definitions(licgen PRIVATE APPLICATION_SECRET=\"${LICGEN_APPLICATION_SECRET}\")

target_include_directories(licgen PUBLIC include)
target_include_directories(licgen PRIVATE src)
if(UNIX)
    target_link_libraries(licgen udev m)
endif()
target_compile_definitions(licgen PRIVATE ${LICGEN_DEFINITIONS})
set_property(TARGET licgen PROPERTY C_STANDARD 11)
if(CMAKE_BUILD_TYPE MATCHES Release)
    if(UNIX)
        set_property(TARGET licgen PROPERTY COMPILE_FLAGS "-s")
    endif()
    set_property(TARGET licgen PROPERTY POSITION_INDEPENDENT_CODE ON)
endif()

#[appname]-license-generator
if(LICGEN_BUILD_GENERATOR)
    set(GENETATOR_APP_NAME ${LICGEN_APPLICATION_NAME}-license-generator)
    add_executable(${GENETATOR_APP_NAME} src/licgen-generator.c)
    target_include_directories(${GENETATOR_APP_NAME} PRIVATE include)
    target_link_libraries(${GENETATOR_APP_NAME} licgen)
    if(CMAKE_BUILD_TYPE MATCHES Release)
        if(UNIX)
            set_property(TARGET ${GENETATOR_APP_NAME} PROPERTY COMPILE_FLAGS "-s")
        endif()
        set_property(TARGET ${GENETATOR_APP_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)
    endif()
endif()

if(LICGEN_BUILD_TESTAPPS)
    add_executable(test-hwinfo tests/test-hwinfo.c ${HWINFO_SOURCES})
    target_include_directories(test-hwinfo PRIVATE src)
    if(UNIX)
        target_link_libraries(test-hwinfo udev m)
    endif()
    add_executable(test-hash tests/test-hash.c src/hash.c)
    target_include_directories(test-hash PRIVATE src)
    add_executable(test-crypt tests/test-crypt.c src/crypt.c src/obfuscation.c)
    target_include_directories(test-crypt PRIVATE src)
    add_executable(test-licgen tests/test-licgen.c)
    target_link_libraries(test-licgen licgen)
    target_include_directories(test-licgen PRIVATE src include)
    add_executable(test-licgen-file tests/test-licgen-file.c)
    target_link_libraries(test-licgen-file licgen)
    target_include_directories(test-licgen-file PRIVATE src)
    add_executable(test-vm tests/test-vm.c ${VM_SOURCES})
    target_include_directories(test-vm PRIVATE src)
    if(UNIX)
        target_link_libraries(test-vm udev)
    endif()
endif()
